--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.1",
+    "express": "^4.18.1",
     "native-base": "^3.4.17",
     "react": "18.1.0",
     "react-native": "0.70.1",
