--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "prestart": "node ./Api/expressApp.js",
+    "nodemon": "nodemon /Api/express.js",
     "test": "jest",
     "lint": "eslint ."
   },
