--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.5",
     "nodemon": "^2.0.20"
   }
 }
